--- a/src/app/app.html
+++ b/src/app/app.html
@@ -108,7 +108,7 @@
                                     <p>Guaranteed by Wed, 11 Feb</p>
                                 </div>
                                 <div class="Locate">
-                                    <p>Priority Delivery,with shipping fee ₱38.00</p>
+                                    <p>Priority Delivery,with shipping fee 38$</p>
                                 </div>
                             </div>
                         </div>
